<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/show_as_grid_action"
        android:icon="@drawable/ic_view_module_24dp"
        android:title="@string/show_as_grid_label"
        app:showAsAction="always" />
    <item
        android:id="@+id/show_as_list_action"
        android:icon="@drawable/ic_view_list_24dp"
        android:title="@string/show_as_list_label"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_sort_24dp"
        android:title="@string/menu_sort_title"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/sort_by_name"
                android:title="@string/sort_by_name_label" />
            <item
                android:id="@+id/sort_by_date"
                android:title="@string/sort_by_date_label" />
        </menu>
    </item>

</menu>